app_customize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: nginx-app
